Accept any string for currency code in PaymentRequest.

BUG=636723, 640847

Review-Url: https://codereview.chromium.org/2271113002
Cr-Commit-Position: refs/heads/master@{#415831}

Former-commit-id: 25156023212b2fa380ccb48b2597549119003ec2